backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
#      serviceAccountName: backend-sva
      containers:
      - image: moonkotte/tests:backend-v1
        name: todolist
        ports:
          - containerPort: 8000
        volumeMounts:
          - mountPath: /var/log/
            name: backend
          - mountPath: /app/todolist/todolist/settings.py
            name: django1
            subPath: settings.py
        command: ["/bin/sh", "-c"]
        args:
        - apt-get update;
          apt-get -y install vim;
          python manage.py makemigrations bucket;
          python manage.py migrate;
          python manage.py runserver 0.0.0.0:8000
      volumes:
        - name: backend
          hostPath:
            path: /var/log/
        - name: django1
          configMap:
            name: django1
            items:
            - key: settings.py
              path: settings.py
