frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: moonkotte/tests:frontend-v2
        name: react-todolist
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: /var/log/
            name: frontend
        command: ["/bin/sh", "-c"]
        args:
          - npm start;
      volumes:
        - name: frontend
          hostPath:
            path: /var/log/
