mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-db
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-db
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: /var/log/
            name: mysql-db
      volumes:
        - name: mysql-db
          hostPath:
            path: /var/log/
