backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
